--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea
 **/__pycache__
+_out/*
 
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
