update build wheels

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .idea
 **/__pycache__
 _out/*
+cibuildwheel.md
+gopy_build_example
+pythonic-core
 
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
