--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -26,43 +26,48 @@ jobs:
         with:
           go-version: '1.23'
 
+      - name: Set up Python for gopy
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
       - name: Install Go dependencies
         run: |
           go install github.com/go-python/gopy@latest
           go install golang.org/x/tools/cmd/goimports@latest
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install Python dependencies
-        run: python -m pip install pybindgen cibuildwheel
-
       - name: Generate Python package source using gopy
         run: gopy pkg -output=_out -vm=python3 -name=banbta -version=0.3.0 github.com/banbox/banta/python/ta github.com/banbox/banta/python/tav
 
       - name: Replace setup.py with custom version
+        shell: bash # Use bash for consistency across platforms
         run: cp python/setup_custom.py _out/setup.py
 
-      - name: Copy Go source files for build
-        run: |
-          cp -r python/ta _out/
-          cp -r python/tav _out/
+      - name: Set up Python for cibuildwheel
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse _out
         env:
-          # On Linux, cibuildwheel builds in a Docker container. We need to install Go there.
-          # The linux-specific command overrides the generic one, so we repeat `pip install pybindgen`.
-          CIBW_BEFORE_BUILD_LINUX: "curl -sL https://go.dev/dl/go1.23.0.linux-amd64.tar.gz | tar -C /usr/local -xzf - && pip install pybindgen"
-          # Add Go to the PATH in the container.
+          # For Linux, install Go once per container using CIBW_BEFORE_ALL.
+          # This is more efficient than installing it for every Python version.
+          CIBW_BEFORE_ALL_LINUX: >
+            curl -sL https://go.dev/dl/go1.23.0.linux-amd64.tar.gz | tar -C /usr/local -xzf - &&
+            /usr/local/go/bin/go version
+          
+          # For Linux, add Go to the PATH inside the container.
           CIBW_ENVIRONMENT_LINUX: 'PATH=/usr/local/go/bin:$PATH'
-          # Install pybindgen before building each wheel, as it's required by our build script.
-          # This is used by Windows and macOS builds. For Linux, this is overridden by the _LINUX variant.
+          
+          # Before building each wheel (on all platforms), install pybindgen.
           CIBW_BEFORE_BUILD: "pip install pybindgen"
-          # Skip testing for now. You can configure this later.
-          CIBW_TEST_COMMAND: ""
+          
+          # Skip running tests for now.
+          CIBW_TEST_COMMAND: "echo 'Tests are skipped'"
           CIBW_TEST_SKIP: "*"
 
       - name: Store wheel artifacts
@@ -75,8 +80,8 @@ jobs:
     name: Publish wheels to PyPI
     needs: build_wheels
     runs-on: ubuntu-latest
-    # Only run this job when a new tag starting with 'v' is pushed.
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    # Only run on 'v*' tags, matching the trigger.
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     environment: pypi
     permissions:
       id-token: write # required for trusted publishing
