--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -32,7 +32,9 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CGO_ENABLED: 1
+          # CGO_ENABLED: 1
+          CIBW_BUILD: "cp3*_x86_64"
+          CIBW_ARCHS: "native"
           # For Linux, install Go once per container using CIBW_BEFORE_ALL.
           # This is more efficient than installing it for every Python version.
           CIBW_BEFORE_ALL_LINUX: >
@@ -63,8 +65,16 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_wheels_macos:
-    name: Build wheels on macOS
-    runs-on: macos-latest
+    name: MacOS ${{ matrix.os_version }} 3${{ matrix.python3_version }} ${{ matrix.arch_cibw_go[0] }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os_version: [ 12, 13, 14 ]
+        python3_version: [ 10, 11, 12 ]
+        arch_cibw_go:
+          - [ "x86_64", "amd64" ]
+          - [ "arm64", "arm64" ]
+    runs-on: macos-${{ matrix.os_version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -77,7 +87,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.${{ matrix.python3_version }}'
 
       - name: Install Go dependencies
         run: |
@@ -96,8 +106,13 @@ jobs:
         env:
           CGO_ENABLED: 1
           # Build for both x86_64 and arm64 (Apple Silicon)
-          CIBW_ARCHS: "x86_64 arm64"
-          CIBW_ENVIRONMENT: 'PATH=$HOME/go/bin:$PATH'
+          CIBW_ARCHS: ${{ matrix.arch_cibw_go[0] }}
+          CIBW_BUILD: "cp3${{ matrix.python3_version }}-*"
+          # Set ARCHFLAGS to solve "cgo: cannot parse ... as ELF, Mach-O, PE or XCOFF"
+          # This is necessary for gopy to correctly cross-compile on macOS.
+          CIBW_ENVIRONMENT: 'PATH=$HOME/go/bin:$PATH ARCHFLAGS="-arch ${CIBW_ARCH}" GOARCH=${{ matrix.arch_cibw_go[1] }}'
+          # Allow all CGO LDFLAGS to prevent issues with certain flags in CI.
+          CGO_LDFLAGS_ALLOW: '.*'
           CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
           # Skip building for Python 3.7 and older, and all PyPy versions.
           CIBW_SKIP: "cp36-* cp37-* pp*"
@@ -112,7 +127,7 @@ jobs:
 
   build_wheels_windows:
     name: Build wheels on Windows
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -142,7 +157,9 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CGO_ENABLED: 1
+          # CGO_ENABLED: 1
+          CIBW_BUILD: "cp3*"
+          CIBW_ARCHS: "native"
           # On Windows, GOPATH defaults to %USERPROFILE%\go
           # CIBW_ENVIRONMENT: 'PATH=%USERPROFILE%/go/bin;%PATH%'
           CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
@@ -150,6 +167,8 @@ jobs:
           CIBW_SKIP: "cp36-* cp37-* pp* *-win32"
           CIBW_TEST_COMMAND: "echo 'Tests are skipped'"
           CIBW_TEST_SKIP: "*"
+          CIBW_ENVIRONMENT: >
+            GOARCH=amd64
 
       - name: Store wheel artifacts
         uses: actions/upload-artifact@v4
