--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ cibuildwheel.md
 gopy.md
 gopy_build_example
 pythonic-core
+tmp
 
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
