--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,3 +1,6 @@
+# 可参考如下项目的一些配置：
+# https://github.com/tdewolff/minify/blob/fb9d8da7423075897c53e6a711fa7781f7146f77/.github/workflows/python.yml
+
 name: Build and Publish Wheels
 
 on:
@@ -30,7 +33,7 @@ jobs:
         run: python -m pip install cibuildwheel
 
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        uses: pypa/cibuildwheel@v2.23.3
         env:
           # CGO_ENABLED: 1
           CIBW_BUILD: "cp3*_x86_64"
@@ -50,13 +53,10 @@ jobs:
           CIBW_ENVIRONMENT_LINUX: 'PATH=/usr/local/go/bin:/root/go/bin:$PATH'
           
           # Before building each wheel (on all platforms), install pybindgen and other build dependencies.
-          CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
+          # CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
           
           # Skip building for Python 3.7 and older, and all PyPy versions.
           CIBW_SKIP: "cp36-* cp37-* pp* *-i686"
-          # Skip running tests for now.
-          CIBW_TEST_COMMAND: "echo 'Tests are skipped'"
-          CIBW_TEST_SKIP: "*"
 
       - name: Store wheel artifacts
         uses: actions/upload-artifact@v4
@@ -69,8 +69,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os_version: [ 12, 13, 14 ]
-        python3_version: [ 10, 11, 12 ]
+        os_version: [ 13 ]
+        python3_version: [ 10]
         arch_cibw_go:
           - [ "x86_64", "amd64" ]
           - [ "arm64", "arm64" ]
@@ -102,22 +102,19 @@ jobs:
         run: python -m pip install cibuildwheel
 
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        uses: pypa/cibuildwheel@v2.23.3
         env:
           CGO_ENABLED: 1
           # Build for both x86_64 and arm64 (Apple Silicon)
           CIBW_ARCHS: ${{ matrix.arch_cibw_go[0] }}
           CIBW_BUILD: "cp3${{ matrix.python3_version }}-*"
-          # Set ARCHFLAGS to solve "cgo: cannot parse ... as ELF, Mach-O, PE or XCOFF"
           # This is necessary for gopy to correctly cross-compile on macOS.
-          CIBW_ENVIRONMENT: 'PATH=$HOME/go/bin:$PATH ARCHFLAGS="-arch ${CIBW_ARCH}" GOARCH=${{ matrix.arch_cibw_go[1] }}'
+          CIBW_ENVIRONMENT: 'PATH=$HOME/go/bin:$PATH GOARCH=${{ matrix.arch_cibw_go[1] }}'
           # Allow all CGO LDFLAGS to prevent issues with certain flags in CI.
           CGO_LDFLAGS_ALLOW: '.*'
-          CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
+          # CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
           # Skip building for Python 3.7 and older, and all PyPy versions.
           CIBW_SKIP: "cp36-* cp37-* pp*"
-          CIBW_TEST_COMMAND: "echo 'Tests are skipped'"
-          CIBW_TEST_SKIP: "*"
 
       - name: Store wheel artifacts
         uses: actions/upload-artifact@v4
@@ -127,7 +124,7 @@ jobs:
 
   build_wheels_windows:
     name: Build wheels on Windows
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -155,18 +152,13 @@ jobs:
         run: python -m pip install cibuildwheel
 
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        uses: pypa/cibuildwheel@v2.23.3
         env:
           # CGO_ENABLED: 1
           CIBW_BUILD: "cp3*"
           CIBW_ARCHS: "native"
-          # On Windows, GOPATH defaults to %USERPROFILE%\go
-          # CIBW_ENVIRONMENT: 'PATH=%USERPROFILE%/go/bin;%PATH%'
-          CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
           # Skip building for Python 3.7 and older, and all PyPy versions.
           CIBW_SKIP: "cp36-* cp37-* pp* *-win32"
-          CIBW_TEST_COMMAND: "echo 'Tests are skipped'"
-          CIBW_TEST_SKIP: "*"
           CIBW_ENVIRONMENT: >
             GOARCH=amd64
 
