update build wheel

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,5 +1,6 @@
 # 可参考如下项目的一些配置：
 # https://github.com/tdewolff/minify/blob/fb9d8da7423075897c53e6a711fa7781f7146f77/.github/workflows/python.yml
+# 也可github搜索Code，查找相关示例： gopy cibuildwheel language:yaml
 
 name: Build and Publish Wheels
 
@@ -124,16 +125,16 @@ jobs:
 
   build_wheels_windows:
     name: Build wheels on Windows
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        include:
-        - go_target: amd64
-          cibw_target: AMD64
-        #- go_target: 386
-        #  cibw_target: x86
-        #- go_target: arm64
-        #  cibw_target: ARM64
+    runs-on: windows-2019
+    # strategy:
+    #   matrix:
+    #     include:
+    #     - go_target: amd64
+    #       cibw_target: AMD64
+    #     - go_target: 386
+    #      cibw_target: x86
+    #     - go_target: arm64
+    #      cibw_target: ARM64
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -165,7 +166,8 @@ jobs:
         env:
           CGO_ENABLED: 1
           CIBW_BUILD: "cp3*"
-          CIBW_ARCHS: "${{ matrix.cibw_target }}"
+          CIBW_ARCHS: "native"
+          # CIBW_ARCHS: "${{ matrix.cibw_target }}"
           CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
           # Skip building for Python 3.7 and older, and all PyPy versions.
           CIBW_SKIP: "cp36-* cp37-* cp38-* cp39-* pp* *-win32"
@@ -175,7 +177,7 @@ jobs:
       - name: Store wheel artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: cibw-wheels-windows-${{ matrix.cibw_target }}
+          name: cibw-wheels-windows-amd64
           path: ./wheelhouse/*.whl
 
   publish_wheels:
