--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -15,23 +15,16 @@ on:
 
 jobs:
   build_wheels_linux:
+    if: false
     name: Build wheels on Linux
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
       - name: Use custom setup.py
         shell: bash # Use bash for consistency across platforms
         run: cp python/setup_custom.py setup.py
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.23.3
@@ -66,6 +59,7 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_wheels_macos:
+    if: false
     name: MacOS ${{ matrix.os_version }} 3${{ matrix.python3_version }} ${{ matrix.arch_cibw_go[0] }}
     strategy:
       fail-fast: false
@@ -85,11 +79,6 @@ jobs:
         with:
           go-version: '1.23'
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.${{ matrix.python3_version }}'
-
       - name: Install Go dependencies
         run: |
           go install github.com/go-python/gopy@latest
@@ -98,9 +87,6 @@ jobs:
       - name: Use custom setup.py
         shell: bash # Use bash for consistency across platforms
         run: cp python/setup_custom.py setup.py
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.23.3
@@ -144,11 +130,6 @@ jobs:
         with:
           go-version: '1.23'
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
       - name: Install Go dependencies
         run: |
           go install github.com/go-python/gopy@latest
@@ -158,9 +139,6 @@ jobs:
         shell: bash # Use bash for consistency across platforms
         run: cp python/setup_custom.py setup.py
 
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel
-
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.23.3
         env:
@@ -168,11 +146,9 @@ jobs:
           CIBW_BUILD: "cp3*"
           CIBW_ARCHS: "native"
           # CIBW_ARCHS: "${{ matrix.cibw_target }}"
-          CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
+          CIBW_BEFORE_BUILD: 'python python/set_gopy_env.py && call gopy_env.bat && pip install pybindgen setuptools wheel'
           # Skip building for Python 3.7 and older, and all PyPy versions.
           CIBW_SKIP: "cp36-* cp37-* cp38-* cp39-* pp* *-win32"
-          GOPY_LIBDIR: ${{ format('{0}/libs', env.pythonLocation) || '' }}
-          GOPY_PYLIB: "python311"
           CIBW_ENVIRONMENT: >
             GOARCH=amd64
 
