--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -31,6 +31,9 @@ jobs:
         shell: bash # Use bash for consistency across platforms
         run: cp python/setup_custom.py setup.py
 
+      - name: Install cibuildwheel # fix gcc  cannot find -lpython3.11
+        run: python -m pip install cibuildwheel
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.23.3
         env:
@@ -86,6 +89,9 @@ jobs:
         uses: docker/setup-qemu-action@v3
         with:
           platforms: all
+
+      - name: Install cibuildwheel # fix gcc  cannot find -lpython3.11
+        run: python -m pip install cibuildwheel
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.23.3
