--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.23.3
         env:
-          # CGO_ENABLED: 1
+          CGO_ENABLED: 1
           CIBW_BUILD: "cp3*_x86_64"
           CIBW_ARCHS: "native"
           # For Linux, install Go once per container using CIBW_BEFORE_ALL.
@@ -51,8 +51,8 @@ jobs:
             ln -sf /root/go/bin/gopy /usr/local/bin/gopy &&
             ln -sf /root/go/bin/goimports /usr/local/bin/goimports
           
-          # For Linux, add Go to the PATH inside the container.
-          CIBW_ENVIRONMENT_LINUX: 'PATH=/usr/local/go/bin:/root/go/bin:$PATH'
+          # For Linux, add Go to the PATH and set CGO_LDFLAGS to help the linker find the Python library.
+          CIBW_ENVIRONMENT_LINUX: 'PATH=/usr/local/go/bin:/root/go/bin:$PATH CGO_LDFLAGS=$(python-config --ldflags)'
           
           # Before building each wheel (on all platforms), install pybindgen and other build dependencies.
           CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
@@ -97,6 +97,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.23.3
         env:
+          CGO_ENABLED: 1
           CIBW_BUILD: "cp311*_aarch64"
           CIBW_ARCHS: "aarch64"
           CIBW_BEFORE_ALL_LINUX: >
@@ -107,7 +108,8 @@ jobs:
             /usr/local/go/bin/go install golang.org/x/tools/cmd/goimports@latest &&
             ln -sf /root/go/bin/gopy /usr/local/bin/gopy &&
             ln -sf /root/go/bin/goimports /usr/local/bin/goimports
-          CIBW_ENVIRONMENT_LINUX: 'PATH=/usr/local/go/bin:/root/go/bin:$PATH'
+          # For Linux, add Go to the PATH and set CGO_LDFLAGS to help the linker find the Python library.
+          CIBW_ENVIRONMENT_LINUX: 'PATH=/usr/local/go/bin:/root/go/bin:$PATH CGO_LDFLAGS=$(python-config --ldflags)'
           CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
           CIBW_SKIP: "cp36-* cp37-* cp38-* cp39-* cp310-* cp313-* pp* *-musllinux*"
 
