--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -93,7 +93,7 @@ jobs:
             ln -sf /root/go/bin/gopy /usr/local/bin/gopy &&
             ln -sf /root/go/bin/goimports /usr/local/bin/goimports
           # For Linux, add Go to the PATH and set CGO_LDFLAGS to help the linker find the Python library.
-          CIBW_ENVIRONMENT_LINUX: 'PATH=/usr/local/go/bin:/root/go/bin:$PATH CGO_LDFLAGS=$(python-config --ldflags)'
+          CIBW_ENVIRONMENT_LINUX: 'PATH=/usr/local/go/bin:/root/go/bin:$PATH'
           CIBW_BEFORE_BUILD: "pip install pybindgen setuptools wheel"
           CIBW_SKIP: "cp36-* cp37-* cp38-* cp39-* cp310-* cp313-* pp* *-musllinux*"
 
